objects/Accepted_But_Not_En_route_PE__e.object
<CustomObject>
    <fields>
        <fullName>Accepted_Resource_Id__c</fullName>
        <label>Accepted Resource Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DML_Action__c</fullName>
        <label>DML Action</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Service_Appointment_Status__c</fullName>
        <label>Previous Service Appointment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Appointment_Id__c</fullName>
        <label>Service Appointment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Appointment_Status__c</fullName>
        <label>Service Appointment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Accepted But Not En-route PE</label>
    <pluralLabel>Accepted But Not En-route PES</pluralLabel>
</CustomObject>